[gd_scene load_steps=17 format=3 uid="uid://cfw88ytwojyy5"]

[ext_resource type="Script" path="res://levels/music.gd" id="1_5ob07"]
[ext_resource type="PackedScene" uid="uid://cu8n2gudtbpw0" path="res://real_tile_map.tscn" id="1_ka215"]
[ext_resource type="PackedScene" uid="uid://b41vwujrqjvtn" path="res://ObstacleObjects/log1.tscn" id="4_6gmd4"]
[ext_resource type="PackedScene" uid="uid://cusswafy60ou1" path="res://ObstacleObjects/log2.tscn" id="5_ylc3q"]
[ext_resource type="PackedScene" uid="uid://ceu6kpb6c54xg" path="res://ObstacleObjects/tree1.tscn" id="6_l6mbu"]
[ext_resource type="PackedScene" uid="uid://dcy8gbee24n3x" path="res://ObstacleObjects/rock1.tscn" id="7_al3rd"]
[ext_resource type="PackedScene" uid="uid://37rpkb3r2n74" path="res://Berries/PinkBerry.tscn" id="8_8xqwg"]
[ext_resource type="PackedScene" uid="uid://cfn6erwivdvba" path="res://ObstacleObjects/bush1.tscn" id="8_37ele"]
[ext_resource type="PackedScene" uid="uid://dxutpspyb6krb" path="res://ObstacleObjects/rock2.tscn" id="8_m2shj"]
[ext_resource type="PackedScene" path="res://playerStartPos.tscn" id="9_j1qbw"]
[ext_resource type="PackedScene" uid="uid://cjivx4bga8qts" path="res://badger.tscn" id="9_ubq7o"]
[ext_resource type="AudioStream" uid="uid://bn4262tspuaq7" path="res://music/Project chipi 1st level (with intro).mp3" id="11_sqy5k"]
[ext_resource type="AudioStream" uid="uid://bbfs4m271785m" path="res://music/Project chipi 1st level (without intro).mp3" id="12_lwjxl"]

[sub_resource type="Curve2D" id="Curve2D_ybt41"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 299, -297, 0, 0, 0, 0, 709, -302, 0, 0, 0, 0, 714, -17, 0, 0, 0, 0, 304, -20, 0, 0, 0, 0, 299, -297)
}
point_count = 5

[sub_resource type="Curve2D" id="Curve2D_uh5xy"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -304, -187)
}
point_count = 1

[sub_resource type="NavigationPolygon" id="NavigationPolygon_a852u"]
vertices = PackedVector2Array(739.969, -354.961, 739.031, 17, 627.219, -121.078, 624.789, -232.961, 239.25, -353.031, 355, -234.039, 243.227, -191.648, 355, -118.922, 269.906, 17, -379.539, 111.453, -390.719, 186.672, -421, 189.141, -421, 168.242, -410.227, -275.039, 21.2578, -276.953, 25.2578, -127, -280.703, 117.563, -297.039, 654.93, -575, 653.063, -575, 527.242, -346, 509.242, -298.039, 409.227, -346, 230.594, -254, 408.219, -272.227, 227.57, -254, 318.922, 271.906, 245.289, 253.156, 245.859, 198.883, 188.5, 176.406, 195.992, 144.023, -127, 150.078, -185.57, 1.82031, 320.969)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3), PackedInt32Array(4, 0, 3, 5), PackedInt32Array(6, 4, 5, 7, 8), PackedInt32Array(2, 1, 8, 7), PackedInt32Array(9, 10, 11, 12, 13), PackedInt32Array(9, 13, 14, 15, 16), PackedInt32Array(17, 18, 19, 20), PackedInt32Array(21, 17, 20, 22), PackedInt32Array(23, 21, 22, 24, 25), PackedInt32Array(8, 26, 27, 28), PackedInt32Array(29, 30, 31, 6, 8, 28), PackedInt32Array(29, 32, 25, 24, 16, 15, 30)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-585, 518, -585, 663, -287, 665, -288, 419, -244, 418, -244, 329, 5, 331, 181, 205, 196, 200, 249, 256, 282, 255, 280, 27, 749, 27, 750, -365, 229, -363, 233, -201, 141, -195, 135, -137, 35, -137, 31, -287, -420, -285, -431, 168, -431, 200, -382, 196, -371, 122, -290, 127, -283, 218, -356, 221, -356, 500), PackedVector2Array(365, -224, 615, -223, 617, -131, 365, -129)])
source_geometry_group_name = &"navigation_polygon_source_group"

[node name="Level1" type="Node2D"]
script = ExtResource("1_5ob07")

[node name="RealTileMap" parent="." instance=ExtResource("1_ka215")]
z_index = -2
position = Vector2(-33, 108)
scale = Vector2(5, 5)
rendering_quadrant_size = 15
layer_0/tile_data = PackedInt32Array(-131075, 655360, 3, -65539, 655360, 4, -3, 655360, 4, 65533, 655360, 4, 131069, 655360, 5, -131074, 720896, 3, -131073, 262144, 2, -196608, 720896, 3, -196607, 786432, 3, -131071, 786432, 4, -65535, 786432, 4, 1, 786432, 4, 65537, 786432, 5, 65536, 589824, 2, 131071, 720896, 5, 131070, 524288, 2, 65534, 851968, 5, -1, 917504, 4, -2, 851968, 4, -65538, 851968, 3, -65537, 917504, 3, -65536, 983040, 4, -131072, 983040, 3, 0, 983040, 5, 65535, 917504, 5, 65532, 786432, 2, 131068, 655360, 2, 196604, 983040, 1, 196605, 917504, 4, 196606, 917504, 4, 196607, 786432, 2, 131072, 851968, 1, 131073, 851968, 1, 131067, 851968, 1, 196603, 851968, 1, 262139, 851968, 1, 262140, 851968, 1, 262141, 851968, 1, 262142, 851968, 1, 262143, 851968, 1, 196608, 851968, 1, 131074, 851968, 1, 65538, 851968, 1, 2, 851968, 1, -65534, 851968, 1, -131070, 851968, 1, -196606, 851968, 1, -262142, 851968, 1, -262143, 851968, 1, -262144, 851968, 1, -196609, 851968, 1, -196610, 851968, 1, -196611, 851968, 1, -196612, 786432, 1, -131076, 851968, 1, -65540, 851968, 1, -65541, 786432, 2, -5, 851968, 1, 65531, 851968, 1, -4, 851968, 1, -131077, 851968, 1, -196613, 851968, 1, -262149, 851968, 1, -262148, 851968, 1, -262147, 786432, 2, -262146, 983040, 1, -262145, 851968, 1, -327680, 851968, 1, -327679, 851968, 1, -327678, 851968, 1, -327677, 851968, 1, -262141, 851968, 1, -196605, 851968, 1, -131069, 786432, 2, -65533, 983040, 2, 3, 851968, 1, 65539, 851968, 1, 131075, 917504, 2, 196611, 786432, 2, 196610, 786432, 1, 196609, 851968, 1, 262138, 851968, 7, 196602, 851968, 7, 131066, 851968, 7, 65530, 851968, 7, -6, 851968, 7, -65542, 851968, 7, -131078, 851968, 7, -196614, 851968, 7, -262150, 851968, 7, 327674, 786432, 8, 327673, 720896, 8, 327672, 851968, 6, 393208, 851968, 7, 393209, 917504, 7, 458744, 851968, 7, 524280, 851968, 8, 524281, 917504, 8, 458745, 655360, 2, 458746, 917504, 7, 393210, 917504, 7, 393211, 786432, 2, 327675, 917504, 7, 327676, 917504, 7, 393212, 917504, 7, 458748, 917504, 7, 458747, 917504, 7, 524282, 917504, 8, 524283, 917504, 8, 524284, 917504, 8, 524285, 983040, 8, 458749, 983040, 7, 393213, 983040, 7, 327677, 655360, 6, 327678, 720896, 6, 327679, 720896, 6, 262144, 720896, 6, 262145, 720896, 6, 262146, 720896, 6, 262147, 720896, 6, 393214, 720896, 7, 393215, 720896, 7, 327680, 720896, 7, 327681, 720896, 7, 327682, 720896, 7, 327683, 720896, 7, 393219, 720896, 7, 458754, 720896, 7, 458753, 720896, 7, 458752, 720896, 7, 524287, 720896, 7, 458750, 720896, 7, 458751, 720896, 7, 393216, 720896, 7, 393217, 720896, 7, 393218, 720896, 7, 458755, 720896, 7, 524286, 720896, 7, -196615, 720896, 7, -131079, 720896, 7, -65543, 720896, 7, -7, 720896, 7, 65529, 720896, 7, 131065, 720896, 7, 196601, 720896, 7, 262137, 720896, 7, -196616, 720896, 7, -131080, 720896, 7, -65544, 720896, 7, -8, 720896, 7, 65528, 720896, 7, 131064, 720896, 7, 196600, 720896, 7, 262136, 720896, 7, -262151, 720896, 7, -262152, 720896, 7, -262153, 720896, 7, -196617, 720896, 7, -131081, 720896, 7, -65545, 720896, 7, -9, 720896, 7, 65527, 720896, 7, 131063, 720896, 7, 196599, 720896, 7, 262135, 720896, 7, 327671, 720896, 7, 393207, 720896, 7, 458743, 720896, 7, 524279, 720896, 7, 589815, 720896, 7, 589816, 720896, 7, 589817, 720896, 7, 589818, 720896, 7, 589819, 720896, 7, 589820, 720896, 7, 589821, 720896, 7, 589822, 720896, 7, 589823, 720896, 7, 524288, 720896, 7, 524289, 720896, 7, 524290, 720896, 7, 524291, 720896, 7, -327685, 917504, 6, -327684, 917504, 6, -327683, 917504, 6, -327682, 917504, 6, -327681, 917504, 6, -393216, 917504, 6, -393215, 917504, 6, -393214, 786432, 8, -393213, 917504, 4, -327686, 851968, 6, -458749, 917504, 6, -458750, 720896, 7, -458751, 720896, 7, -458752, 720896, 7, -393217, 720896, 7, -393218, 720896, 7, -393219, 720896, 7, -393220, 720896, 7, -393221, 720896, 7, -393222, 720896, 7, -393223, 720896, 7, -393224, 720896, 7, -327687, 720896, 7, -327688, 720896, 7, -327689, 720896, 7, -393225, 720896, 7, 196612, 655360, 7, 131076, 655360, 7, 65540, 655360, 7, 4, 655360, 7, -65532, 655360, 6, 262148, 983040, 8, -327676, 262144, 6, -327675, 327680, 6, -327674, 327680, 6, -327673, 327680, 6, -327672, 393216, 6, -262136, 196608, 6, -196600, 393216, 7, -196601, 327680, 7, -196602, 327680, 7, -196603, 327680, 7, -196604, 262144, 7, -262140, 65536, 6, -458748, 917504, 6, -458747, 917504, 6, -458746, 917504, 6, -458745, 917504, 6, -458744, 917504, 6, -458743, 917504, 6, -262139, 786432, 2, -262138, 917504, 2, -262137, 917504, 4, -131068, 917504, 4, -65531, 720896, 6, -65530, 720896, 6, -65529, 720896, 6, -65528, 720896, 6, -131067, 917504, 4, -131066, 917504, 4, -131065, 917504, 4, -131064, 917504, 4, -393212, 917504, 4, -393211, 917504, 4, -393210, 917504, 4, -393209, 917504, 4, -393208, 917504, 4, -393207, 917504, 4, -327671, 917504, 4, -262135, 917504, 4, -196599, 917504, 4, -131063, 917504, 4, -65527, 720896, 6, -393206, 917504, 7, -327670, 917504, 7, -262134, 917504, 7, -196598, 917504, 7, -131062, 917504, 7, -65525, 983040, 8, -65526, 917504, 8, -458741, 983040, 6, -393205, 983040, 7, -327669, 983040, 7, -262133, 983040, 7, -196597, 983040, 7, -131061, 983040, 7, -458742, 917504, 6)

[node name="Objects" type="Node2D" parent="."]
z_index = -1

[node name="Log" parent="Objects" instance=ExtResource("4_6gmd4")]
position = Vector2(-105, 396)

[node name="Log2" parent="Objects" instance=ExtResource("5_ylc3q")]
position = Vector2(126, 321)
rotation = -0.698132

[node name="Tree" parent="Objects" instance=ExtResource("6_l6mbu")]
position = Vector2(-398, 406)

[node name="Rock" parent="Objects" instance=ExtResource("7_al3rd")]
position = Vector2(-330, 162)

[node name="Rock2" parent="Objects" instance=ExtResource("8_m2shj")]
position = Vector2(-401, 253)

[node name="Log3" parent="Objects" instance=ExtResource("4_6gmd4")]
position = Vector2(493, -167)

[node name="Log4" parent="Objects" instance=ExtResource("7_al3rd")]
position = Vector2(188, -249)

[node name="Log5" parent="Objects" instance=ExtResource("6_l6mbu")]
position = Vector2(88, -225)

[node name="PinkBerry" parent="Objects" instance=ExtResource("8_8xqwg")]
position = Vector2(783, -161)

[node name="Bush1" parent="Objects" instance=ExtResource("8_37ele")]
z_index = -1
position = Vector2(-69, 62)

[node name="Bush2" parent="Objects" instance=ExtResource("8_37ele")]
position = Vector2(-527, 595)

[node name="PointLight2D" type="PointLight2D" parent="."]

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource("Curve2D_ybt41")

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
position = Vector2(299, -297)
rotation = -0.0121945
rotates = false

[node name="badger" parent="Path2D/PathFollow2D" instance=ExtResource("9_ubq7o")]

[node name="Path2D2" type="Path2D" parent="."]
position = Vector2(-1, 0)
curve = SubResource("Curve2D_uh5xy")

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D2"]

[node name="badger" parent="Path2D2/PathFollow2D" instance=ExtResource("9_ubq7o")]
position = Vector2(-292, -161)

[node name="NavigationRegion2D" type="NavigationRegion2D" parent="."]
navigation_polygon = SubResource("NavigationPolygon_a852u")

[node name="PlayerStartPos" parent="." instance=ExtResource("9_j1qbw")]
position = Vector2(-529, 592)

[node name="IntroPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("11_sqy5k")

[node name="LoopPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("12_lwjxl")

[node name="BadgerPlayer" type="AudioStreamPlayer2D" parent="."]
